# soi-semafory

./: CMakeLists.txt  buffer.c  buffer.h  consumer.c  init.c  prettyPrintLog.kt  producer_a.c  producer_b.c  semaphore.c  semaphore.h  shared_memory.c  shared_memory.h
